   * units can now have a recruit animation that will be played on unit
   recruit.
   * units now have idle animations when they arn't used for some time
   * units now have levelin animations when they level into this unit
   * units now have levelout animations when they level out of this unit
 * multiplayer game management
   * client now tells the server if a game ended in victory or defeat 
 * multiplayer scenarios
   * scenarios can set faction, recruit, leader, and some other initial 
     settings previously ignored in multiplayer
 * language and i18n:
   * new manpages: Czech, Italian, Slovak.
   * updated manpages: German, Swedish.
   * removed manpages (outdated): Hungarian.
	
Version 1.1.7:
 * campaigns
   * Heir to the Throne
     * added 2 mermen to Bay of Pearls on hard
     * lowered turn limits on Scepter of Fire to something sane
 * language and i18n:
    * updated translations: French, German, Portuguese (Brazil), Spanish,
      Swedish
 * multiplayer maps:
    * revised multiplayer maps: Amohsad Caldera
 * units
    * balancing changes:
      * removed White Mage and Mage of Light from random_leader
      * removed special defense values from the Merman Hoplite
      * decreased the melee attack of the Merman Javelineer from 8-3 to 8-2
      * increased the melee attack of the Merman Entangler from 7-3 to 8-3
      * increased the ranged attack of the Merman Entangler from 7-3 to 8-3
      * increased the melee attack of the Necrophage from 6-3 to 7-3
      * decreased the XP requirement of the Necrophage from 66 to 40
 * music & sound
   * new or improved sounds: lich hit & die, bite, tail
 * graphics
   * new village flag animation
   * some units and animations updated for team color support
 * fixed bug that caused the game to freeze when a leader takes part in a
   fight

Version 1.1.6:
 * campaigns
   * Heir to the Throne
     * added a secret, powerful item to one of the later scenarios