@@ -558,6 +558,7 @@ Andrea Palmatè (afxgroup)
 EdB
 Jim Carroll (Jimm)
 Petr Sobotka (Pietro)
+Stéphane Gimenez (gim)
 "
 [/about]
 
