@@ -47,6 +47,7 @@ Version 1.3-svn:
    * units now have levelout animations when they level out of this unit
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat 
+   * configurable castle size for random map generator (patch #598, FR #3232)
  * multiplayer scenarios
    * scenarios can set faction, recruit, leader, and some other initial 
      settings previously ignored in multiplayer
